fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,8 +245,8 @@ a:active {
   }
 
   .intro {
-    font-size: 28px;
-    letter-spacing: -0.28px;
+    font-size: 24px;
+    letter-spacing: -0.40px;
     line-height: 36px;
   }
 
